Fix twitter avatar left align

--- a/_sass/_twitter-cards.scss
+++ b/_sass/_twitter-cards.scss
@@ -28,8 +28,7 @@
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
       grid-row-end: span 2;
       height: 2.5em;
-      margin: 0.25em;
-      margin-right: 0.5em;
+      margin: 0.25em 0.5em 0.25em 0;
     }
 
     img.logo {
